alteração px to rem

--- a/CSS/apresentacao.css
+++ b/CSS/apresentacao.css
@@ -12,7 +12,7 @@
 .titulo{
     font-family: var(--fonte-principal);
     color: var(--laranja);
-    font-size: 50px;
+    font-size: 3.125rem;
     font-weight: 700;
     text-align: center;
 }
@@ -20,7 +20,7 @@
 .conteudo{
     font-family: var(--fonte-principal);
     color: var(--branco);
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 400;
     text-align: center;
 }
@@ -29,5 +29,5 @@
     display: flex;
     justify-content: center;
     padding-top: 3.5em;
-    gap: 20px;
+    gap: 1.25rem;
 }
