--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -3,7 +3,7 @@
 }
 
 .formulario__contato{
-    max-width: 700px;
+    max-width: 43.75rem;
     margin: 0 auto;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(5px);
@@ -22,7 +22,7 @@
     width: 98%;
     margin: 0 auto;
     background: var(--claro);
-    border-radius: 8px;
+    border-radius: 0.5rem;
     border: 1px solid var(--vidro);
     outline: none;
     color: var(--branco);
@@ -31,7 +31,7 @@
 
 .campo__form:focus{
     border-color: rgba(255, 60, 0, 0.4);
-    box-shadow: 0 0 10px rgba(255, 60, 0, 0.4);
+    box-shadow: 0 0 0.625rem rgba(255, 60, 0, 0.4);
 }
 
 .botao__form{
