--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -51,3 +51,21 @@
     color: var(--branco);
     background: var(--laranja);
 }
+
+@media (max-width: 1024px){
+
+.grupo__form{
+    margin-bottom: 1rem;
+    padding-right: 2rem;
+}
+
+.formulario__contato{
+    max-width: 43.75rem;
+    margin: 0.625rem 0.625rem;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(5px);
+    padding: 2rem;
+    border: 1px solid var(--vidro);
+    border-radius: 16px;
+}
+}
